2007-09-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/document/document_glom.cc: 
	save_before_layout_item_field_formatting(),
	load_after_layout_item_field_formatting(),
	* glom/utility_widgets/datawidget.cc: constructor:
	Ignore the multiline formatting options for non-text fields,
	so that these will not be used for number fields if they were used 
	before changing the field from text to number.
	Bug #443360 (Harry Mills)

2007-09-02  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/connectionpool.cc: start_self_hosting(): Specify a 
	Linux/Unix SIGSEGV signal handler so we stop postgres when we 
	crash. I wonder if there is a way to still have bug-buddy's 
	crash reports while doing this.

1.5.2 (unstable):

2007-06-10  Murray Cumming  <murrayc@murrayc.com>

	* glom/libglom/spawn_with_feedback.cc: 
	execute_command_line_on_thread_create(): Do not delete the data 
	before using it, to avoid a crash.
	* configure.ac: Depend on the latest versions of libgdamm and libxml++, 
	which also have fixes for crashes in Glom.

2007-06-05  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

1.5.1 (unstable):

2007-05-22  Yselkowitz  <yselkowitz@users.sourceforge.net>

	* glom/libglom/Makefile.am:
	* glom/libglom/connectionpool.cc:
	Cygwin/Windows fix: Expect the EXEEXT file extension when searching for 
	postmaster. Bug #440335.

2007-05-20  Murray Cumming  <murrayc@murrayc.com>

	* configure.in: Check for the pgk-config file of the libgda 
	postgres providers.
	* glom/libglom/connectionpool.cc:
	* glom/libglom/connectionpool.h:
	* glom/main.cc: Added and used 
	check_postgres_gda_client_is_available_with_warning() to do 
	a runtime check for the presence of the libgda postgres provider. 

2007-05-14  Johannes Schmid <johannes.schmid@openismus.com>
	
	* glom/python_embed/glom_python.cc:
	#361171 - Show Python errors in a dialog

2007-05-14  Armin Burgmeier  <armin@openismus.com>
